parser/kernalex.output
Terminals unused in grammar

    TOK_SIZEOF


State 329 conflicts: 16 reduce/reduce
State 330 conflicts: 16 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: TOK_IDENTIFIER
    2                   | constant
    3                   | string
    4                   | TOK_TRUE
    5                   | TOK_FALSE
    6                   | TOK_LPAREN expression TOK_RPAREN

    7 constant: TOK_INTEGER
    8         | TOK_FLOAT_LIT
    9         | TOK_CHAR_LIT

   10 string: TOK_STRING_LIT

   11 postfix_expression: primary_expression
   12                   | postfix_expression TOK_LBRACKET expression TOK_RBRACKET
   13                   | postfix_expression TOK_LPAREN TOK_RPAREN
   14                   | postfix_expression TOK_LPAREN argument_expression_list TOK_RPAREN
   15                   | postfix_expression TOK_DOT TOK_IDENTIFIER
   16                   | postfix_expression TOK_ARROW TOK_IDENTIFIER
   17                   | postfix_expression TOK_INC
   18                   | postfix_expression TOK_DEC
   19                   | TOK_LPAREN type_name TOK_RPAREN TOK_BEGIN initializer_list TOK_END
   20                   | TOK_LPAREN type_name TOK_RPAREN TOK_BEGIN initializer_list TOK_COMMA TOK_END

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list TOK_COMMA assignment_expression

   23 unary_expression: postfix_expression
   24                 | TOK_INC unary_expression
   25                 | TOK_DEC unary_expression
   26                 | TOK_MINUS cast_expression
   27                 | TOK_PLUS cast_expression
   28                 | TOK_NOT cast_expression
   29                 | TOK_BITNOT cast_expression
   30                 | TOK_AMP cast_expression
   31                 | TOK_STAR cast_expression

   32 cast_expression: unary_expression
   33                | TOK_LPAREN type_name TOK_RPAREN cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression TOK_MULT cast_expression
   36                          | multiplicative_expression TOK_DIV cast_expression
   37                          | multiplicative_expression TOK_MOD cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression TOK_PLUS multiplicative_expression
   40                    | additive_expression TOK_MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression TOK_LSHIFT additive_expression
   43                 | shift_expression TOK_RSHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression TOK_LT shift_expression
   46                      | relational_expression TOK_GT shift_expression
   47                      | relational_expression TOK_LE shift_expression
   48                      | relational_expression TOK_GE shift_expression
   49                      | relational_expression TOK_SPACESHIP shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression TOK_EQ relational_expression
   52                    | equality_expression TOK_NE relational_expression

   53 and_expression: equality_expression
   54               | and_expression TOK_AMP equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression TOK_XOR and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression TOK_BITOR exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression TOK_AND inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression TOK_OR logical_and_expression

   63 conditional_expression: logical_or_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression TOK_ASSIGN assignment_expression
   66                      | unary_expression TOK_PLUSEQ assignment_expression
   67                      | unary_expression TOK_MINUSEQ assignment_expression
   68                      | unary_expression TOK_MULTEQ assignment_expression
   69                      | unary_expression TOK_DIVEQ assignment_expression
   70                      | unary_expression TOK_MODEQ assignment_expression

   71 expression: assignment_expression
   72           | expression TOK_COMMA assignment_expression

   73 constant_expression: conditional_expression

   74 declaration: declaration_specifiers TOK_SEMICOLON
   75            | declaration_specifiers init_declarator_list TOK_SEMICOLON

   76 declaration_specifiers: storage_class_specifier declaration_specifiers
   77                       | storage_class_specifier
   78                       | type_specifier declaration_specifiers
   79                       | type_specifier

   80 init_declarator_list: init_declarator
   81                     | init_declarator_list TOK_COMMA init_declarator

   82 init_declarator: declarator TOK_ASSIGN initializer
   83                | declarator

   84 storage_class_specifier: TOK_EXTERN
   85                        | TOK_STATIC

   86 type_specifier: TOK_VOID
   87               | TOK_CHAR
   88               | TOK_SHORT
   89               | TOK_INT
   90               | TOK_FLOAT
   91               | TOK_BOOL
   92               | TOK_BOOLEAN
   93               | TOK_INT8_T
   94               | TOK_INT16_T
   95               | TOK_INT32_T
   96               | TOK_INT64_T
   97               | TOK_SIGNED
   98               | TOK_UNSIGNED
   99               | struct_specifier

  100 struct_specifier: TOK_STRUCT TOK_IDENTIFIER TOK_BEGIN struct_declaration_list TOK_END
  101                 | TOK_STRUCT TOK_IDENTIFIER

  102 struct_declaration_list: struct_declaration
  103                        | struct_declaration_list struct_declaration

  104 struct_declaration: specifier_qualifier_list TOK_SEMICOLON
  105                   | specifier_qualifier_list struct_declarator_list TOK_SEMICOLON

  106 specifier_qualifier_list: type_specifier specifier_qualifier_list
  107                         | type_specifier

  108 struct_declarator_list: struct_declarator
  109                       | struct_declarator_list TOK_COMMA struct_declarator

  110 struct_declarator: TOK_COLON constant_expression
  111                  | declarator TOK_COLON constant_expression
  112                  | declarator

  113 declarator: pointer direct_declarator
  114           | direct_declarator

  115 direct_declarator: TOK_IDENTIFIER
  116                  | TOK_LPAREN declarator TOK_RPAREN
  117                  | direct_declarator TOK_LBRACKET TOK_RBRACKET
  118                  | direct_declarator TOK_LBRACKET assignment_expression TOK_RBRACKET
  119                  | direct_declarator TOK_LPAREN parameter_type_list TOK_RPAREN
  120                  | direct_declarator TOK_LPAREN TOK_RPAREN
  121                  | direct_declarator TOK_LPAREN identifier_list TOK_RPAREN

  122 pointer: TOK_STAR pointer
  123        | TOK_STAR

  124 parameter_type_list: parameter_list

  125 parameter_list: parameter_declaration
  126               | parameter_list TOK_COMMA parameter_declaration

  127 parameter_declaration: declaration_specifiers declarator
  128                      | declaration_specifiers abstract_declarator
  129                      | declaration_specifiers

  130 identifier_list: TOK_IDENTIFIER
  131                | identifier_list TOK_COMMA TOK_IDENTIFIER

  132 type_name: specifier_qualifier_list abstract_declarator
  133          | specifier_qualifier_list

  134 abstract_declarator: pointer direct_abstract_declarator
  135                    | pointer
  136                    | direct_abstract_declarator

  137 direct_abstract_declarator: TOK_LPAREN abstract_declarator TOK_RPAREN
  138                           | TOK_LBRACKET TOK_RBRACKET
  139                           | TOK_LBRACKET assignment_expression TOK_RBRACKET
  140                           | direct_abstract_declarator TOK_LBRACKET TOK_RBRACKET
  141                           | direct_abstract_declarator TOK_LBRACKET assignment_expression TOK_RBRACKET
  142                           | TOK_LPAREN TOK_RPAREN
  143                           | TOK_LPAREN parameter_type_list TOK_RPAREN
  144                           | direct_abstract_declarator TOK_LPAREN TOK_RPAREN
  145                           | direct_abstract_declarator TOK_LPAREN parameter_type_list TOK_RPAREN

  146 initializer: TOK_BEGIN initializer_list TOK_END
  147            | TOK_BEGIN initializer_list TOK_COMMA TOK_END
  148            | assignment_expression

  149 initializer_list: designation initializer
  150                 | initializer
  151                 | initializer_list TOK_COMMA designation initializer
  152                 | initializer_list TOK_COMMA initializer

  153 designation: designator_list TOK_ASSIGN

  154 designator_list: designator
  155                | designator_list designator

  156 designator: TOK_LBRACKET constant_expression TOK_RBRACKET
  157           | TOK_DOT TOK_IDENTIFIER

  158 statement: matched_statement
  159          | unmatched_statement

  160 compound_statement: TOK_BEGIN TOK_END
  161                   | TOK_BEGIN block_item_list TOK_END

  162 block_item_list: block_item
  163                | block_item_list block_item

  164 block_item: declaration
  165           | statement

  166 expression_statement: TOK_SEMICOLON
  167                     | expression TOK_SEMICOLON

  168 L_mark: ε

  169 M_mark_stmt: expression_statement

  170 M_mark_expr: expression

  171 if_head: TOK_IF TOK_LPAREN expression TOK_RPAREN

  172 if_else_head: if_head matched_statement TOK_ELSE

  173 matched_statement: compound_statement
  174                  | expression_statement
  175                  | iteration_statement
  176                  | jump_statement
  177                  | TOK_IDENTIFIER TOK_COLON matched_statement
  178                  | TOK_CASE constant_expression TOK_COLON matched_statement
  179                  | TOK_DEFAULT TOK_COLON matched_statement
  180                  | TOK_SWITCH TOK_LPAREN expression TOK_RPAREN matched_statement
  181                  | if_else_head matched_statement

  182 unmatched_statement: TOK_IDENTIFIER TOK_COLON unmatched_statement
  183                    | TOK_CASE constant_expression TOK_COLON unmatched_statement
  184                    | TOK_DEFAULT TOK_COLON unmatched_statement
  185                    | unmatched_iteration_statement
  186                    | if_head statement
  187                    | if_else_head unmatched_statement

  188 iteration_statement: TOK_WHILE L_mark TOK_LPAREN M_mark_expr TOK_RPAREN matched_statement
  189                    | TOK_REPEAT L_mark matched_statement TOK_UNTIL TOK_LPAREN expression TOK_RPAREN TOK_SEMICOLON
  190                    | TOK_FOR TOK_LPAREN expression_statement L_mark M_mark_stmt TOK_RPAREN matched_statement

  191 @1: ε

  192 @2: ε

  193 iteration_statement: TOK_FOR TOK_LPAREN expression_statement L_mark M_mark_stmt @1 expression TOK_RPAREN @2 matched_statement
  194                    | TOK_FOR TOK_LPAREN declaration L_mark M_mark_stmt TOK_RPAREN matched_statement

  195 @3: ε

  196 @4: ε

  197 iteration_statement: TOK_FOR TOK_LPAREN declaration L_mark M_mark_stmt @3 expression TOK_RPAREN @4 matched_statement

  198 unmatched_iteration_statement: TOK_WHILE L_mark TOK_LPAREN M_mark_expr TOK_RPAREN unmatched_statement
  199                              | TOK_REPEAT L_mark unmatched_statement TOK_UNTIL TOK_LPAREN expression TOK_RPAREN TOK_SEMICOLON
  200                              | TOK_FOR TOK_LPAREN expression_statement L_mark M_mark_stmt TOK_RPAREN unmatched_statement

  201 @5: ε

  202 @6: ε

  203 unmatched_iteration_statement: TOK_FOR TOK_LPAREN expression_statement L_mark M_mark_stmt @5 expression TOK_RPAREN @6 unmatched_statement
  204                              | TOK_FOR TOK_LPAREN declaration L_mark M_mark_stmt TOK_RPAREN unmatched_statement

  205 @7: ε

  206 @8: ε

  207 unmatched_iteration_statement: TOK_FOR TOK_LPAREN declaration L_mark M_mark_stmt @7 expression TOK_RPAREN @8 unmatched_statement

  208 jump_statement: TOK_CONTINUE TOK_SEMICOLON
  209               | TOK_BREAK TOK_SEMICOLON
  210               | TOK_RETURN TOK_SEMICOLON
  211               | TOK_RETURN expression TOK_SEMICOLON

  212 translation_unit: external_declaration
  213                 | translation_unit external_declaration

  214 external_declaration: function_definition
  215                     | declaration

  216 function_definition: declaration_specifiers declarator declaration_list compound_statement
  217                    | declaration_specifiers declarator compound_statement

  218 declaration_list: declaration
  219                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    TOK_INT (1) 89
    TOK_SHORT (2) 88
    TOK_FLOAT (3) 90
    TOK_CHAR (4) 87
    TOK_VOID (5) 86
    TOK_BOOL (6) 91
    TOK_BOOLEAN (7) 92
    TOK_STRUCT (8) 100 101
    TOK_INT8_T (9) 93
    TOK_INT16_T (10) 94
    TOK_INT32_T (11) 95
    TOK_INT64_T (12) 96
    TOK_SIGNED (13) 97
    TOK_UNSIGNED (14) 98
    TOK_EXTERN (15) 84
    TOK_STATIC (16) 85
    TOK_IF <val> (17) 171
    TOK_ELSE <val> (18) 172
    TOK_FOR (19) 190 193 194 197 200 203 204 207
    TOK_WHILE (20) 188 198
    TOK_REPEAT (21) 189 199
    TOK_UNTIL (22) 189 199
    TOK_SWITCH (23) 180
    TOK_CASE (24) 178 183
    TOK_DEFAULT (25) 179 184
    TOK_BREAK (26) 209
    TOK_CONTINUE (27) 208
    TOK_RETURN (28) 210 211
    TOK_SIZEOF (29)
    TOK_BEGIN (30) 19 20 100 146 147 160 161
    TOK_END (31) 19 20 100 146 147 160 161
    TOK_TRUE (32) 4
    TOK_FALSE (33) 5
    TOK_IDENTIFIER <temp> (34) 1 15 16 100 101 115 130 131 157 177 182
    TOK_INTEGER <temp> (35) 7
    TOK_FLOAT_LIT <temp> (36) 8
    TOK_CHAR_LIT <temp> (37) 9
    TOK_STRING_LIT <temp> (38) 10
    TOK_PLUS (39) 27 39
    TOK_MINUS (40) 26 40
    TOK_MULT (41) 35
    TOK_DIV (42) 36
    TOK_MOD (43) 37
    TOK_ASSIGN (44) 65 82 153
    TOK_EQ (45) 51
    TOK_NE (46) 52
    TOK_LT (47) 45
    TOK_LE (48) 47
    TOK_GT (49) 46
    TOK_GE (50) 48
    TOK_SPACESHIP (51) 49
    TOK_AND (52) 60
    TOK_OR (53) 62
    TOK_NOT (54) 28
    TOK_BITOR (56) 58
    TOK_XOR (57) 56
    TOK_BITNOT (58) 29
    TOK_LSHIFT (59) 42
    TOK_RSHIFT (60) 43
    TOK_INC (61) 17 24
    TOK_DEC (62) 18 25
    TOK_PLUSEQ (63) 66
    TOK_MINUSEQ (64) 67
    TOK_MULTEQ (65) 68
    TOK_DIVEQ (66) 69
    TOK_MODEQ (67) 70
    TOK_ARROW (68) 16
    TOK_AMP (69) 30 54
    TOK_STAR (70) 31 122 123
    TOK_LPAREN (71) 6 13 14 19 20 33 116 119 120 121 137 142 143 144 145 171 180 188 189 190 193 194 197 198 199 200 203 204 207
    TOK_RPAREN (72) 6 13 14 19 20 33 116 119 120 121 137 142 143 144 145 171 180 188 189 190 193 194 197 198 199 200 203 204 207
    TOK_LBRACKET (75) 12 117 118 138 139 140 141 156
    TOK_RBRACKET (76) 12 117 118 138 139 140 141 156
    TOK_SEMICOLON (77) 74 75 104 105 166 167 189 199 208 209 210 211
    TOK_COMMA (78) 20 22 72 81 109 126 131 147 151 152
    TOK_DOT (79) 15 157
    TOK_COLON (80) 110 111 177 178 179 182 183 184
    error (256)


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    primary_expression <temp> (81)
        on left: 1 2 3 4 5 6
        on right: 11
    constant <temp> (82)
        on left: 7 8 9
        on right: 2
    string <temp> (83)
        on left: 10
        on right: 3
    postfix_expression <temp> (84)
        on left: 11 12 13 14 15 16 17 18 19 20
        on right: 12 13 14 15 16 17 18 23
    argument_expression_list <temp> (85)
        on left: 21 22
        on right: 14 22
    unary_expression <temp> (86)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 24 25 32 65 66 67 68 69 70
    cast_expression <temp> (87)
        on left: 32 33
        on right: 26 27 28 29 30 31 33 34 35 36 37
    multiplicative_expression <temp> (88)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <temp> (89)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <temp> (90)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48 49
    relational_expression <temp> (91)
        on left: 44 45 46 47 48 49
        on right: 45 46 47 48 49 50 51 52
    equality_expression <temp> (92)
        on left: 50 51 52
        on right: 51 52 53 54
    and_expression <temp> (93)
        on left: 53 54
        on right: 54 55 56
    exclusive_or_expression <temp> (94)
        on left: 55 56
        on right: 56 57 58
    inclusive_or_expression <temp> (95)
        on left: 57 58
        on right: 58 59 60
    logical_and_expression <temp> (96)
        on left: 59 60
        on right: 60 61 62
    logical_or_expression <temp> (97)
        on left: 61 62
        on right: 62 63
    conditional_expression <temp> (98)
        on left: 63
        on right: 64 73
    assignment_expression <temp> (99)
        on left: 64 65 66 67 68 69 70
        on right: 21 22 65 66 67 68 69 70 71 72 118 139 141 148
    expression <temp> (100)
        on left: 71 72
        on right: 6 12 72 167 170 171 180 189 193 197 199 203 207 211
    constant_expression <temp> (101)
        on left: 73
        on right: 110 111 156 178 183
    declaration (102)
        on left: 74 75
        on right: 164 194 197 204 207 215 218 219
    declaration_specifiers (103)
        on left: 76 77 78 79
        on right: 74 75 76 78 127 128 129 216 217
    init_declarator_list (104)
        on left: 80 81
        on right: 75 81
    init_declarator (105)
        on left: 82 83
        on right: 80 81
    storage_class_specifier (106)
        on left: 84 85
        on right: 76 77
    type_specifier (107)
        on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99
        on right: 78 79 106 107
    struct_specifier (108)
        on left: 100 101
        on right: 99
    struct_declaration_list (109)
        on left: 102 103
        on right: 100 103
    struct_declaration (110)
        on left: 104 105
        on right: 102 103
    specifier_qualifier_list (111)
        on left: 106 107
        on right: 104 105 106 132 133
    struct_declarator_list (112)
        on left: 108 109
        on right: 105 109
    struct_declarator (113)
        on left: 110 111 112
        on right: 108 109
    declarator <temp> (114)
        on left: 113 114
        on right: 82 83 111 112 116 127 216 217
    direct_declarator <temp> (115)
        on left: 115 116 117 118 119 120 121
        on right: 113 114 117 118 119 120 121
    pointer (116)
        on left: 122 123
        on right: 113 122 134 135
    parameter_type_list (117)
        on left: 124
        on right: 119 143 145
    parameter_list (118)
        on left: 125 126
        on right: 124 126
    parameter_declaration (119)
        on left: 127 128 129
        on right: 125 126
    identifier_list (120)
        on left: 130 131
        on right: 121 131
    type_name (121)
        on left: 132 133
        on right: 19 20 33
    abstract_declarator (122)
        on left: 134 135 136
        on right: 128 132 137
    direct_abstract_declarator (123)
        on left: 137 138 139 140 141 142 143 144 145
        on right: 134 136 140 141 144 145
    initializer <temp> (124)
        on left: 146 147 148
        on right: 82 149 150 151 152
    initializer_list (125)
        on left: 149 150 151 152
        on right: 19 20 146 147 151 152
    designation (126)
        on left: 153
        on right: 149 151
    designator_list (127)
        on left: 154 155
        on right: 153 155
    designator (128)
        on left: 156 157
        on right: 154 155
    statement (129)
        on left: 158 159
        on right: 165 186
    compound_statement (130)
        on left: 160 161
        on right: 173 216 217
    block_item_list (131)
        on left: 162 163
        on right: 161 163
    block_item (132)
        on left: 164 165
        on right: 162 163
    expression_statement <temp> (133)
        on left: 166 167
        on right: 169 174 190 193 200 203
    L_mark <temp> (134)
        on left: 168
        on right: 188 189 190 193 194 197 198 199 200 203 204 207
    M_mark_stmt <temp> (135)
        on left: 169
        on right: 190 193 194 197 200 203 204 207
    M_mark_expr <temp> (136)
        on left: 170
        on right: 188 198
    if_head <temp> (137)
        on left: 171
        on right: 172 186
    if_else_head <temp> (138)
        on left: 172
        on right: 181 187
    matched_statement (139)
        on left: 173 174 175 176 177 178 179 180 181
        on right: 158 172 177 178 179 180 181 188 189 190 193 194 197
    unmatched_statement (140)
        on left: 182 183 184 185 186 187
        on right: 159 182 183 184 187 198 199 200 203 204 207
    iteration_statement (141)
        on left: 188 189 190 193 194 197
        on right: 175
    @1 (142)
        on left: 191
        on right: 193
    @2 (143)
        on left: 192
        on right: 193
    @3 (144)
        on left: 195
        on right: 197
    @4 (145)
        on left: 196
        on right: 197
    unmatched_iteration_statement (146)
        on left: 198 199 200 203 204 207
        on right: 185
    @5 (147)
        on left: 201
        on right: 203
    @6 (148)
        on left: 202
        on right: 203
    @7 (149)
        on left: 205
        on right: 207
    @8 (150)
        on left: 206
        on right: 207
    jump_statement (151)
        on left: 208 209 210 211
        on right: 176
    translation_unit (152)
        on left: 212 213
        on right: 0 213
    external_declaration (153)
        on left: 214 215
        on right: 212 213
    function_definition (154)
        on left: 216 217
        on right: 214
    declaration_list (155)
        on left: 218 219
        on right: 216 219


State 0

    0 $accept: • translation_unit $end

    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16

    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24


State 1

   89 type_specifier: TOK_INT •

    $default  reduce using rule 89 (type_specifier)


State 2

   88 type_specifier: TOK_SHORT •

    $default  reduce using rule 88 (type_specifier)


State 3

   90 type_specifier: TOK_FLOAT •

    $default  reduce using rule 90 (type_specifier)


State 4

   87 type_specifier: TOK_CHAR •

    $default  reduce using rule 87 (type_specifier)


State 5

   86 type_specifier: TOK_VOID •

    $default  reduce using rule 86 (type_specifier)


State 6

   91 type_specifier: TOK_BOOL •

    $default  reduce using rule 91 (type_specifier)


State 7

   92 type_specifier: TOK_BOOLEAN •

    $default  reduce using rule 92 (type_specifier)


State 8

  100 struct_specifier: TOK_STRUCT • TOK_IDENTIFIER TOK_BEGIN struct_declaration_list TOK_END
  101                 | TOK_STRUCT • TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 25


State 9

   93 type_specifier: TOK_INT8_T •

    $default  reduce using rule 93 (type_specifier)


State 10

   94 type_specifier: TOK_INT16_T •

    $default  reduce using rule 94 (type_specifier)


State 11

   95 type_specifier: TOK_INT32_T •

    $default  reduce using rule 95 (type_specifier)


State 12

   96 type_specifier: TOK_INT64_T •

    $default  reduce using rule 96 (type_specifier)


State 13

   97 type_specifier: TOK_SIGNED •

    $default  reduce using rule 97 (type_specifier)


State 14

   98 type_specifier: TOK_UNSIGNED •

    $default  reduce using rule 98 (type_specifier)


State 15

   84 storage_class_specifier: TOK_EXTERN •

    $default  reduce using rule 84 (storage_class_specifier)


State 16

   85 storage_class_specifier: TOK_STATIC •

    $default  reduce using rule 85 (storage_class_specifier)


State 17

  215 external_declaration: declaration •

    $default  reduce using rule 215 (external_declaration)


State 18

   74 declaration: declaration_specifiers • TOK_SEMICOLON
   75            | declaration_specifiers • init_declarator_list TOK_SEMICOLON
  216 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  217                    | declaration_specifiers • declarator compound_statement

    TOK_IDENTIFIER  shift, and go to state 26
    TOK_STAR        shift, and go to state 27
    TOK_LPAREN      shift, and go to state 28
    TOK_SEMICOLON   shift, and go to state 29

    init_declarator_list  go to state 30
    init_declarator       go to state 31
    declarator            go to state 32
    direct_declarator     go to state 33
    pointer               go to state 34


State 19

   76 declaration_specifiers: storage_class_specifier • declaration_specifiers
   77                       | storage_class_specifier •  [TOK_IDENTIFIER, TOK_STAR, TOK_LPAREN, TOK_RPAREN, TOK_LBRACKET, TOK_SEMICOLON, TOK_COMMA]

    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers   go to state 35
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21


State 20

   78 declaration_specifiers: type_specifier • declaration_specifiers
   79                       | type_specifier •  [TOK_IDENTIFIER, TOK_STAR, TOK_LPAREN, TOK_RPAREN, TOK_LBRACKET, TOK_SEMICOLON, TOK_COMMA]

    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers   go to state 36
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21


State 21

   99 type_specifier: struct_specifier •

    $default  reduce using rule 99 (type_specifier)


State 22

    0 $accept: translation_unit • $end
  213 translation_unit: translation_unit • external_declaration

    $end          shift, and go to state 37
    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16

    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    external_declaration     go to state 38
    function_definition      go to state 24


State 23

  212 translation_unit: external_declaration •

    $default  reduce using rule 212 (translation_unit)


State 24

  214 external_declaration: function_definition •

    $default  reduce using rule 214 (external_declaration)


State 25

  100 struct_specifier: TOK_STRUCT TOK_IDENTIFIER • TOK_BEGIN struct_declaration_list TOK_END
  101                 | TOK_STRUCT TOK_IDENTIFIER •  [TOK_INT, TOK_SHORT, TOK_FLOAT, TOK_CHAR, TOK_VOID, TOK_BOOL, TOK_BOOLEAN, TOK_STRUCT, TOK_INT8_T, TOK_INT16_T, TOK_INT32_T, TOK_INT64_T, TOK_SIGNED, TOK_UNSIGNED, TOK_EXTERN, TOK_STATIC, TOK_IDENTIFIER, TOK_STAR, TOK_LPAREN, TOK_RPAREN, TOK_LBRACKET, TOK_SEMICOLON, TOK_COMMA, TOK_COLON]

    TOK_BEGIN  shift, and go to state 39

    $default  reduce using rule 101 (struct_specifier)


State 26

  115 direct_declarator: TOK_IDENTIFIER •

    $default  reduce using rule 115 (direct_declarator)


State 27

  122 pointer: TOK_STAR • pointer
  123        | TOK_STAR •  [TOK_IDENTIFIER, TOK_LPAREN, TOK_RPAREN, TOK_LBRACKET, TOK_COMMA]

    TOK_STAR  shift, and go to state 27

    $default  reduce using rule 123 (pointer)

    pointer  go to state 40


State 28

  116 direct_declarator: TOK_LPAREN • declarator TOK_RPAREN

    TOK_IDENTIFIER  shift, and go to state 26
    TOK_STAR        shift, and go to state 27
    TOK_LPAREN      shift, and go to state 28

    declarator         go to state 41
    direct_declarator  go to state 33
    pointer            go to state 34


State 29

   74 declaration: declaration_specifiers TOK_SEMICOLON •

    $default  reduce using rule 74 (declaration)


State 30

   75 declaration: declaration_specifiers init_declarator_list • TOK_SEMICOLON
   81 init_declarator_list: init_declarator_list • TOK_COMMA init_declarator

    TOK_SEMICOLON  shift, and go to state 42
    TOK_COMMA      shift, and go to state 43


State 31

   80 init_declarator_list: init_declarator •

    $default  reduce using rule 80 (init_declarator_list)


State 32

   82 init_declarator: declarator • TOK_ASSIGN initializer
   83                | declarator •  [TOK_SEMICOLON, TOK_COMMA]
  216 function_definition: declaration_specifiers declarator • declaration_list compound_statement
  217                    | declaration_specifiers declarator • compound_statement

    TOK_INT       shift, and go to state 1
    TOK_SHORT     shift, and go to state 2
    TOK_FLOAT     shift, and go to state 3
    TOK_CHAR      shift, and go to state 4
    TOK_VOID      shift, and go to state 5
    TOK_BOOL      shift, and go to state 6
    TOK_BOOLEAN   shift, and go to state 7
    TOK_STRUCT    shift, and go to state 8
    TOK_INT8_T    shift, and go to state 9
    TOK_INT16_T   shift, and go to state 10
    TOK_INT32_T   shift, and go to state 11
    TOK_INT64_T   shift, and go to state 12
    TOK_SIGNED    shift, and go to state 13
    TOK_UNSIGNED  shift, and go to state 14
    TOK_EXTERN    shift, and go to state 15
    TOK_STATIC    shift, and go to state 16
    TOK_BEGIN     shift, and go to state 44
    TOK_ASSIGN    shift, and go to state 45

    $default  reduce using rule 83 (init_declarator)

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    struct_specifier         go to state 21
    compound_statement       go to state 48
    declaration_list         go to state 49


State 33

  114 declarator: direct_declarator •  [TOK_INT, TOK_SHORT, TOK_FLOAT, TOK_CHAR, TOK_VOID, TOK_BOOL, TOK_BOOLEAN, TOK_STRUCT, TOK_INT8_T, TOK_INT16_T, TOK_INT32_T, TOK_INT64_T, TOK_SIGNED, TOK_UNSIGNED, TOK_EXTERN, TOK_STATIC, TOK_BEGIN, TOK_ASSIGN, TOK_RPAREN, TOK_SEMICOLON, TOK_COMMA, TOK_COLON]
  117 direct_declarator: direct_declarator • TOK_LBRACKET TOK_RBRACKET
  118                  | direct_declarator • TOK_LBRACKET assignment_expression TOK_RBRACKET
  119                  | direct_declarator • TOK_LPAREN parameter_type_list TOK_RPAREN
  120                  | direct_declarator • TOK_LPAREN TOK_RPAREN
  121                  | direct_declarator • TOK_LPAREN identifier_list TOK_RPAREN

    TOK_LPAREN    shift, and go to state 50
    TOK_LBRACKET  shift, and go to state 51

    $default  reduce using rule 114 (declarator)


State 34

  113 declarator: pointer • direct_declarator

    TOK_IDENTIFIER  shift, and go to state 26
    TOK_LPAREN      shift, and go to state 28

    direct_declarator  go to state 52


State 35

   76 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 76 (declaration_specifiers)


State 36

   78 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 78 (declaration_specifiers)


State 37

    0 $accept: translation_unit $end •

    $default  accept


State 38

  213 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 213 (translation_unit)


State 39

  100 struct_specifier: TOK_STRUCT TOK_IDENTIFIER TOK_BEGIN • struct_declaration_list TOK_END
